--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,5 @@ src/json/uuidsToUrlFR.json
 src/json/referentielGeometrieDynamique.json
 src/json/referentielGeometrieDynamiqueCH.json
 src/json/referentielGeometrieDynamiqueFR.json
+
+screenshots/
