--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "test:e2e:all": "vitest --config tests/e2e/vitest.config.all.js --run",
     "test:e2e:interactivity": "vitest --config tests/e2e/vitest.config.interactivity.js --run",
     "test:e2e:pdfexports": "vitest --config tests/e2e/vitest.config.pdfexports.js --run",
-    "test:e2e:console_errors": "vitest --config tests/e2e/vitest.config.console_errors.js --run"
+    "test:e2e:console_errors": "vitest --config tests/e2e/vitest.config.console_errors.js --run",
+    "test:e2e:screenshot": "vitest --config tests/e2e/vitest.config.screenshot.js --run"
   },
   "dependencies": {
     "@bugsnag/js": "^7.22.4",
