--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,6 +13,7 @@
 # Note that environment variables can be set in several places
 # See https://docs.gitlab.com/ee/ci/variables/#cicd-variable-precedence
 stages:
+- playwright-pdfBAC
 - test
 - build-projet
 - playwright-testCanEleve
@@ -54,6 +55,14 @@ default:
 .install_dependenciesPDFDNB:
   before_script:
     - git clone https://forge.apps.education.fr/coopmaths/dnb.git ./public/static/dnb
+    - NODE_OPTIONS=--max-old-space-size=4096 pnpm install
+    - pnpm exec playwright install --with-deps chromium # dernière version playwright.
+    - nohup pnpm start &
+    - sleep 60
+
+.install_dependenciesPDFBAC:
+  before_script:
+    - git clone https://forge.apps.education.fr/coopmaths/bac.git ./public/static/bac
     - NODE_OPTIONS=--max-old-space-size=4096 pnpm install
     - pnpm exec playwright install --with-deps chromium # dernière version playwright.
     - nohup pnpm start &
@@ -141,6 +150,14 @@ testCan6e5e4e3ePDF:
   extends: .testCIPDF
   script:
     - NIV=can/6e^can/5e^can/4e^can/3e pnpm test:e2e:pdfexports
+
+testBAC20202024PDF:
+  extends: 
+    - .testCIPDF
+    - .install_dependenciesPDFBAC
+  stage: playwright-pdfBAC
+  script:
+    - NIV=bac_2023^bac_2022^bac_2021 pnpm test:e2e:pdfexports
 
 testDNB20132015PDF:
   extends: 
