--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "lint": "eslint src/exercices/**/* --ext .js,.ts --fix",
     "lintSvelte": "eslint src/components/**/* --ext .js,.ts,.svelte --fix",
     "docs": "jsdoc -d docs --configure jsdocConf.json",
-    "addDNB": "pnpm install git+https://forge.apps.education.fr/coopmaths/dnb.git && pnpm install shx  && shx mkdir -p ./public/static/dnb && shx cp -r ./node_modules/dnb-files/* ./public/static/dnb",
+    "addDNB": "pnpm --package=git+https://forge.apps.education.fr/coopmaths/dnb -c dlx dnbindex",
     "test:unit": "vitest tests/unit",
     "test:src": "vitest src",
     "test:e2e": "vitest --config tests/e2e/vitest.config.all.js --run",
@@ -72,11 +72,10 @@
     "copy-image-clipboard": "^2.1.2",
     "daisyui": "^4.10.2",
     "decimal.js": "^10.4.3",
-    "dnb-files": "git+https://forge.apps.education.fr/coopmaths/dnb.git",
     "docdash": "^2.0.2",
     "earcut": "^2.2.4",
     "file-saver": "^2.0.5",
-    "instrumenpoche": "git+https://forge.apps.education.fr/coopmaths/instrumenpoche.git",
+    "instrumenpoche": "git+https://git.sesamath.net/sesamath/instrumenpoche.git",
     "jsdoc": "^4.0.2",
     "jszip": "^3.10.1",
     "jszip-utils": "^0.1.0",
@@ -87,11 +86,9 @@
     "mathlive": "^0.98.6",
     "mathsteps": "github:mathalea/mathsteps#update-mathjs",
     "node-fetch": "^3.3.2",
-    "playwright": "^1.43.1",
     "qrcode": "^1.5.3",
     "scratchblocks": "^3.6.4",
     "seedrandom": "^3.0.5",
-    "shx": "^0.3.4",
     "simple-svelte-autocomplete": "^2.5.2",
     "sortablejs": "^1.15.2",
     "svelte-gestures": "^4.0.0",
@@ -128,6 +125,7 @@
     "postcss-load-config": "^5.0.3",
     "prettier": "^3.2.5",
     "prettier-plugin-latex": "^2.0.1",
+    "playwright": "^1.43.1",
     "sass": "^1.75.0",
     "svelte": "^4.2.15",
     "svelte-check": "^3.6.9",
