--- a/package.json
+++ b/package.json
@@ -125,7 +125,7 @@
     "postcss-load-config": "^5.0.3",
     "prettier": "^3.2.5",
     "prettier-plugin-latex": "^2.0.1",
-    "playwright": "^1.43.1",
+    "playwright": "1.43.1",
     "sass": "^1.75.0",
     "svelte": "^4.2.15",
     "svelte-check": "^3.6.9",
