--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,10 +13,14 @@
 # Note that environment variables can be set in several places
 # See https://docs.gitlab.com/ee/ci/variables/#cicd-variable-precedence
 stages:
+- playwright-testInteractivity
+- playwright-testConsistency
 - playwright-test
 - test
 - build-projet
 - playwright-testCanEleve
+- playwright-testConsistency
+- playwright-testInteractivity
 - playwright-test
 - playwright-pdf
 - playwright-pdfDNB
@@ -53,56 +57,41 @@ default:
     - pnpm config set store-dir .pnpm-store
     - pnpm -v
     - lualatex -v
-    - pwd #/builds/coopmaths/mathalea
-    - texconfig conf | grep TEXMFHOME #TEXMFHOME=/root/texmf
-    - mkdir -p /root/texmf/tex/latex
-    - cd /root/texmf/tex/latex
-    - wget http://mirrors.ctan.org/macros/latex/contrib/profcollege.zip
-    - unzip profcollege.zip
-    - rm profcollege.zip
-    - cd /builds/coopmaths/mathalea
-    - NODE_OPTIONS=--max-old-space-size=4096 pnpm install
+    - npm install playwright@1.44.0 --with-deps chromium
+    - pnpm install
     - nohup pnpm start &
-    - sleep 60
+    - sleep 10
+    - until $(curl --output /dev/null --head --fail http://localhost:80/alea/); do printf '.'; sleep 10; done
+    - sleep 30
   
 .install_dependenciesPDFDNB:
   before_script:
     - pnpm config set store-dir .pnpm-store
     - pnpm -v
     - lualatex -v
-    - pwd #/builds/coopmaths/mathalea
-    - texconfig conf | grep TEXMFHOME #TEXMFHOME=/root/texmf
-    - mkdir -p /root/texmf/tex/latex
-    - cd /root/texmf/tex/latex
-    - wget http://mirrors.ctan.org/macros/latex/contrib/profcollege.zip
-    - unzip profcollege.zip
-    - rm profcollege.zip
-    - cd /builds/coopmaths/mathalea
+    - pnpm exec playwright@1.44.0 install --with-deps chromium
     - git clone https://forge.apps.education.fr/coopmaths/dnb.git ./public/static/dnb
-    - NODE_OPTIONS=--max-old-space-size=4096 pnpm install
+    - pnpm install
     - nohup pnpm start &
-    - sleep 60
+    - sleep 10
+    - until $(curl --output /dev/null --head --fail http://localhost:80/alea/); do printf '.'; sleep 10; done
+    - sleep 30
 
 .install_dependenciesPDFBAC:
   before_script:
     - pnpm config set store-dir .pnpm-store
     - pnpm -v
     - lualatex -v
-    - pwd #/builds/coopmaths/mathalea
-    - texconfig conf | grep TEXMFHOME #TEXMFHOME=/root/texmf
-    - mkdir -p /root/texmf/tex/latex
-    - cd /root/texmf/tex/latex
-    - wget http://mirrors.ctan.org/macros/latex/contrib/profcollege.zip
-    - unzip profcollege.zip
-    - rm profcollege.zip
-    - cd /builds/coopmaths/mathalea
+    - pnpm exec playwright@1.44.0 install --with-deps chromium
     - git clone https://forge.apps.education.fr/coopmaths/bac.git ./public/static/bac
-    - NODE_OPTIONS=--max-old-space-size=4096 pnpm install
+    - pnpm install
     - nohup pnpm start &
-    - sleep 60
+    - sleep 10
+    - until $(curl --output /dev/null --head --fail http://localhost:80/alea/); do printf '.'; sleep 10; done
+    - sleep 30
 
 .testCIPDF:
-  image: guironne/tex-live-nodejs-playwright7
+  image: guironne/tex-live-nodejs-playwright8
   extends: .install_dependenciesPDF
   stage: playwright-pdf
   allow_failure: true
@@ -114,7 +103,10 @@ default:
   - when: never
   retry:
     max: 2
-    when: runner_system_failure
+    when: 
+    - runner_system_failure
+    - script_failure
+    - unknown_failure
   artifacts:
     when: always
     paths:
@@ -140,7 +132,10 @@ default:
   - when: never
   retry:
     max: 2
-    when: runner_system_failure
+    when: 
+    - runner_system_failure
+    - script_failure
+    - unknown_failure
   artifacts:
     when: always
     paths:
@@ -186,6 +181,7 @@ testCan6e5e4e3ePDF:
   extends: .testCIPDF
   script:
     - NIV=can/6e^can/5e^can/4e^can/3e pnpm test:e2e:pdfexports
+    - pnpm -v
 
 testBAC20202024PDF:
   extends: 
@@ -223,21 +219,25 @@ test6ePDF:
   extends: .testCIPDF
   script:
     - NIV=6e/6 pnpm test:e2e:pdfexports
+    - pnpm -v
 
 test5ePDF:
   extends: .testCIPDF
   script:
     - NIV=5e/5 pnpm test:e2e:pdfexports
+    - pnpm -v
 
 test4ePDF:
   extends: .testCIPDF
   script:
     - NIV=4e/4 pnpm test:e2e:pdfexports
+    - pnpm -v
 
 test3ePDF:
   extends: .testCIPDF
   script:
     - NIV=3e/3 pnpm test:e2e:pdfexports
+    - pnpm -v
 
 build:
   extends: .testCI
@@ -264,6 +264,38 @@ playwright-testCanEleve:
   stage: playwright-testCanEleve
   script:
     - pnpm test:e2e:views
+  rules:
+    - if: $CI_COMMIT_BRANCH == "main" && $CI_OPEN_MERGE_REQUESTS
+      when: never
+    - if: $CI_COMMIT_BRANCH == "main"
+      when: always
+    - if: $CI_COMMIT_BRANCH == "guironne-jobs"
+      when: always
+    - when: never
+  artifacts:
+    when: on_failure
+
+playwright-testConsistency:
+  extends: .testCI
+  stage: playwright-testConsistency
+  script:
+    - pnpm test:e2e:consistency
+  rules:
+    - if: $CI_COMMIT_BRANCH == "main" && $CI_OPEN_MERGE_REQUESTS
+      when: never
+    - if: $CI_COMMIT_BRANCH == "main"
+      when: always
+    - if: $CI_COMMIT_BRANCH == "guironne-jobs"
+      when: always
+    - when: never
+  artifacts:
+    when: on_failure
+
+playwright-testInteractivity:
+  extends: .testCI
+  stage: playwright-testInteractivity
+  script:
+    - pnpm test:e2e:interactivity
   rules:
     - if: $CI_COMMIT_BRANCH == "main" && $CI_OPEN_MERGE_REQUESTS
       when: never
