--- a/package.json
+++ b/package.json
@@ -122,14 +122,15 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-svelte": "^2.37.0",
     "jsdom": "^24.0.0",
+    "playwright": "1.44.1",
     "postcss": "^8.4.38",
     "postcss-load-config": "^5.0.3",
     "prettier": "^3.2.5",
     "prettier-plugin-latex": "^2.0.1",
-    "playwright": "1.44.1",
     "sass": "^1.75.0",
     "svelte": "^4.2.15",
     "svelte-check": "^3.6.9",
+    "svelte-eslint-parser": "^0.39.2",
     "svelte-modals": "^1.3.0",
     "svelte-preprocess": "^5.1.4",
     "tailwindcss": "^3.4.3",
