Mise à jour des contributeurs

--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     "Jean-Léon Henry",
     "Mathieu Degrange",
     "Loïc Geeraerts",
-    "Mickael Guironnet"
+    "Mickael Guironnet",
+    "Nathan Scheinmann",
+    "Florian Picard",
+    "Claire Rousset"
   ],
   "license": "AGPL-3.0",
   "bugs": {
