--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
   "homepage": "https://github.com/mathalea/mathalea",
   "scripts": {
     "start": "pnpm makeJson && vite",
-    "build": "pnpm makeJson && vite build",
+    "build": "pnpm makeJson && pnpm prebuild-unit-tests&& pnpm prebuild-e2e-tests && vite build",
     "makeJson": "node tasks/dictionnaireToReferentiel.js && node tasks/updateMenuInternational",
     "getNewUuid": "pnpm makeJson",
     "updateMenu": "pnpm makeJson",
@@ -64,9 +64,8 @@
     "test:e2e:consistency": "vitest --config tests/e2e/vitest.config.consistency.js --run",
     "screenshot": "vitest --config tests/e2e/vitest.config.screenshot.js --run",
     "prepare": "husky",
-    "prepush-regular-tests": "pnpm test:unit && pnpm test:src",
-    "prepush-engine-tests": "pnpm prepush-regular-tests && pnpm build && AUTOTEST=true pnpm test:e2e:views && AUTOTEST=true pnpm test:e2e:interactivity && AUTOTEST=true pnpm test:e2e:consistency",
-    "prepush-check": "echo 'Running prepush-check...' && git diff HEAD~1 HEAD --name-only && if git diff HEAD~1 HEAD --name-only | grep -qE '^(src/|tests/)'; then echo 'Changes detected in src/ or tests/ directories. Running engine tests...' && pnpm prepush-engine-tests; else echo 'No relevant changes detected. Running regulat tests...' && pnpm prepush-regular-tests; fi"
+    "prebuild-unit-tests": "pnpm test:unit && pnpm test:src",
+    "prebuild-e2e-tests": "AUTOTEST=true pnpm test:e2e:views && AUTOTEST=true pnpm test:e2e:interactivity && AUTOTEST=true pnpm test:e2e:consistency"
   },
   "dependencies": {
     "@bugsnag/js": "^7.25.0",
