--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "@svgdotjs/svg.js": "^3.2.4",
     "algebrite": "^1.4.0",
     "apigeom": "git+https://forge.apps.education.fr/coopmaths/apigeom.git",
+    "blockly": "11.1.1",
     "boxicons": "^2.1.4",
     "brace": "^0.11.1",
     "copy-image-clipboard": "^2.1.2",
