--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,5 +1,6 @@
 {
   "recommendations": [
+    "dbaeumer.vscode-eslint",
     "ms-vsliveshare.vsliveshare",
     "GitLab.gitlab-workflow",
     "mhutchie.git-graph",
