--- a/package.json
+++ b/package.json
@@ -134,6 +134,7 @@
     "eslint-plugin-svelte": "^2.44.1",
     "jsdom": "^24.1.3",
     "playwright": "1.45.1",
+    "pnpm": "^8.15.9",
     "postcss": "^8.4.47",
     "postcss-load-config": "^5.1.0",
     "prettier": "^3.3.3",
